--- a/PREWORK_zad2/todo.html
+++ b/PREWORK_zad2/todo.html
@@ -17,8 +17,8 @@
         </p>
     <p>
         Lista ToDo:<br/>
-        <ul id="listaToDo">
-        </ul>
+        <div id="listaToDo">
+        </div>
     </p>
 </body>
 </html>
