--- a/PREWORK_zad2/todo.html
+++ b/PREWORK_zad2/todo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
     <script src="todo.js"></script>
+    <link rel="stylesheet" href="./todo.css"
 </head>
 <body>
         <p>
@@ -17,7 +18,7 @@
         </p>
     <p>
         Lista ToDo:<br/>
-        <div id="listaToDo">
+        <div id="listaToDo" class="list">
         </div>
     </p>
 </body>
