--- a/Zadanie1/src/index.html
+++ b/Zadanie1/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Hello world</div>
+    <div id="app"></div>
+    <script src="./components/index.jsx" type="module"></script>
   </body>
 </html>
